--- a/chart/config-server/values.yaml
+++ b/chart/config-server/values.yaml
@@ -25,10 +25,10 @@ service:
 
 metrics:
   path: /prometheus
-  label: java-spring
+  label: spring-boot
 
 logs:
-  parser: java-spring
+  parser: spring-boot
 
 resources: 
   # We usually recommend not to specify default resources and to leave this as a conscious
