[IMP] 去除了spring-cloud-config-monitor；将通知服务更新配置的方式由bus改为ribbon调用

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,6 +27,7 @@ choerodon:
   config:
     server:
       manager-service: manager-service
+      notify-endpoint: /choerodon/config
 eureka:
   instance:
     preferIpAddress: true
