--- a/chart/config-server/values.yaml
+++ b/chart/config-server/values.yaml
@@ -15,11 +15,11 @@ env:
   open:
     EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://register-server.io-choerodon:8000/eureka/
     # skywalking 代理端配置
-    SKYWALKING_OPTS: >-
-      -javaagent:/agent/skywalking-agent.jar
-      -Dskywalking.agent.application_code=config-server
-      -Dskywalking.agent.sample_n_per_3_secs=-1
-      -Dskywalking.collector.backend_service=oap.skywalking:11800
+#    SKYWALKING_OPTS: >-
+#      -javaagent:/agent/skywalking-agent.jar
+#      -Dskywalking.agent.application_code=config-server
+#      -Dskywalking.agent.sample_n_per_3_secs=-1
+#      -Dskywalking.collector.backend_service=oap.skywalking:11800
 
 service:
   enable: false
