[IMP] 升级spring boot版本到2.0.6, spring cloud到Finchley.SR2

--- a/chart/config-server/templates/deployment.yaml
+++ b/chart/config-server/templates/deployment.yaml
@@ -42,7 +42,7 @@ spec:
             exec:
               command:
               - curl
-              - localhost:{{ .Values.deployment.managementPort }}/health
+              - localhost:{{ .Values.deployment.managementPort }}/actuator/health
             failureThreshold: 3
             initialDelaySeconds: 60
             periodSeconds: 10
