--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -4,9 +4,5 @@ spring:
   application:
     name: config-server
 management:
-  port: 8011
-  security:
-    enabled: false
-security:
-  basic:
-    enabled: false
+  server:
+    port: 8011
