--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 
     <properties>
         <choerodon.starters.version>0.11.0.RELEASE</choerodon.starters.version>
+        <choerodon.mainClass>io.choerodon.config.ConfigServerApplication</choerodon.mainClass>
     </properties>
 
     <dependencies>
@@ -87,6 +88,12 @@
 
     <build>
         <finalName>app</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
     </build>
 
 </project>
