[ADD] pom添加choerodon.serviceBuild参数

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <properties>
         <choerodon.starters.version>0.11.0.RELEASE</choerodon.starters.version>
         <choerodon.mainClass>io.choerodon.config.ConfigServerApplication</choerodon.mainClass>
+        <choerodon.serviceBuild>true</choerodon.serviceBuild>
     </properties>
 
     <dependencies>
