--- a/chart/config-server/values.yaml
+++ b/chart/config-server/values.yaml
@@ -22,7 +22,7 @@ env:
 #      -Dskywalking.collector.backend_service=oap.skywalking:11800
 
 service:
-  enable: false
+  enabled: false
   name: config-server
   type: ClusterIP
   port: 8010
